Fix Baseline layout contrast

--- a/src/color-schemes/contrast.scss
+++ b/src/color-schemes/contrast.scss
@@ -263,6 +263,7 @@ body:is(.contrast-light-tonal.theme-light, .contrast-dark-tonal.theme-dark, .con
       overflow: visible;
     }
     .workspace-tab-container {
+      --tab-outline-width: 1px;
       outline: var(--tab-outline-width) solid var(--tab-outline-color);
     }
   }
